<resources>
    <string name="app_name">Gist</string>
    <string name="ic_search_text">Search</string>
    <string name="action_setting_text">Account Setting</string>

    <string name="create_user">Create User</string>
    <string name="edith_text_email">Please enter your email</string>
    <string name="email_password">Please enter password</string>

    <string name="post_title">Post Title</string>
    <string name="post_description">Post Description</string>
    <string name="submit_text">Submit</string>

    <string name="login_title">Login</string>
    <string name="create_account">Create Account</string>
    <string name="email_login">Email</string>
    <string name="password_login">Password</string>
    <string name="firstName">First name</string>
    <string name="last_name">Last Name</string>
</resources>
